<resources>
    <string name="app_name">inHealth+</string>
    <string name="app_title_name">Her</string>
    <string name="app_big_name">inHealth+</string>
    <string name="app_crash_tip">Opps,crash</string>
    <string name="exit_app">Do you want to exit ？</string>
    <string name="send_email_title">[inHealth+ Android APP]-Help request</string>
    <string name="send_email_replace">APP</string>
    <string name="send_email_content"></string>
    <string name="send_email_app_choose">Choose send email application</string>
    <string name="searching_for_device">searching for devices</string>
    <string name="tips">Information</string>
    <string name="sure">ok</string>
    <string name="cancle">cancel</string>
    <string name="exit">exit</string>
    <string name="successful">Successful</string>
    <string name="failed">Failed</string>
    <string name="loading">loading...</string>
    <string name="searching">Searching...</string>
    <string name="connecting">connecting...</string>
    <string name="setting">setting...</string>
    <string name="syncting">syncing...</string>
    <string name="sync_to_device">Synchronize to Device? </string>
    <string name="setting_success">Successful</string>
    <string name="setting_failed">failed</string>
    <string name="set_success">setting ok</string>
    <string name="set_failed">setting fail</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="every_day">Everyday</string>
    <string name="sunday">Sun</string>
    <string name="saturday">Sat</string>
    <string name="friday">Fri</string>
    <string name="thursday">Thu</string>
    <string name="wednesday">Wed</string>
    <string name="tuesday">Tues</string>
    <string name="monday">Mon</string>
    <string name="no_more_data">No more data</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_login">Login</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_turn_on_bluetooth">Setup a new device</string>
    <string name="title_setup_new_device">Setup a new device</string>
    <string name="title_setup_device_type">Setup device type</string>
    <string name="title_device">Device</string>
    <string name="title_device_info">Device Info</string>
    <string name="title_reminds">Reminders</string>
    <string name="title_goal">Goals</string>
    <string name="title_account">Account</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_friends">Friends</string>
    <string name="title_find_friends">Find Friends</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_advanced">Settings</string>
    <string name="title_update">Update</string>
    <string name="http_network_failed">no network,check your device is connected to the network.</string>
    <string name="http_response_failed">failed</string>
    <string name="http_response_success">Success!Please check your email.</string>
    <string name="open_notification_tip">please grant notification read permissions.</string>
    <string name="btn_login">Login in</string>
    <string name="btn_reg">Sign Up</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password"><u>Forgot Password</u></string>
    <string name="reg_sex">  Gender</string>
    <string name="reg_bmi">  BMI</string>
    <string name="reg_email">  Email</string>
    <string name="reg_phone">Country china(+86)</string>
    <string name="reg_mobile"> Mobilephone</string>
    <string name="reg_password">  Password</string>
    <string name="reg_message_code"> message code</string>
    <string name="reg_verify"> Verify</string>
    <string name="password_length_over">Please input password between 6 to 16 characters</string>
    <string name="password_null">Must input password</string>
    <string name="not_valid_verify_code">Not a valid message code</string>
    <string name="not_valid_phone">Not a valid phone number</string>
    <string name="email_length_over">Please input Email less 30 characters</string>
    <string name="not_valid_email">Not a valid email</string>
    <string name="email_null">Must input email</string>
    <string name="account_null">Must input email</string>
    <string name="get_verify_code_tip">Your verification code will be sent to:\n&#160;&#160;%s\nStandard text messaging rates apply.</string>
    <string name="get_verfi_code_success">a verification code has been sent to your phone.</string>
    <string name="get_verfi_code_fail">request a verification code failed.</string>
    <string name="reg_name">Name</string>
    <string name="reg_male">Male</string>
    <string name="reg_female">Female</string>
    <string name="reg_height">Height</string>
    <string name="reg_weight">Weight</string>
    <string name="reg_birthday">Birthday</string>
    <string name="reg_unit_us">Lb/Mile</string>
    <string name="reg_unit_metric">Kg/Km</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="unit_ft_in">ft/in</string>
    <string name="unit_cm">cm</string>
    <string name="unit_kg">kg</string>
    <string name="unit_lbs">lbs</string>
    <string name="reg_name_null">Must input name</string>
    <string name="reg_height_null">Must input height</string>
    <string name="reg_weight_null">Must input weight</string>
    <string name="reg_birthday_null">Must input birthday</string>
    <string name="show_height_tips">We use  height to determine your step  length</string>
    <string name="show_weight_tips">We use  weight to calculate the calories you burn</string>
    <string name="change_password">Change Password</string>
    <string name="button_logout">Log out</string>
    <string name="logout">Log out?</string>
    <string name="current_pwd">Enter Current Password</string>
    <string name="new_pwd">Enter New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="current_password_null">Must input current password</string>
    <string name="new_password_null">Must input new password</string>
    <string name="confirm_password_null">Must input confirm password</string>
    <string name="confirm_password_error">Verify that the password is not consistent with the new password</string>
    <string name="change_password_ok">Change password is successful,please relogin!</string>
    <string name="menu">Menu</string>
    <string name="sleep_mode">SLEEP MODE</string>
    <string name="connected"> Connected</string>
    <string name="disconnected"> Disconnected</string>
    <string name="heatrbeat"> HeartBeat</string>
    <string name="mood"> Mood</string>
    <string name="tired"> Tired</string>
    <string name="your_current_mood">your current mood is&#160;&#160;</string>
    <string name="your_current_tired">your current tired is&#160;&#160;</string>
    <string name="your_current_heart">your current heart rate is&#160;&#160;</string>
    <string name="friends">&#160;Friends</string>
    <string name="world">&#160;World</string>
    <string name="add_friend">Add&#160;Friend</string>
    <string name="connect_first">connect first</string>
    <string name="sync_data_fail">sync fail</string>
    <string name="sync_data_ok">sync ok</string>
    <string name="steep_descr">STEPS \nTAKEN</string>
    <string name="distance_descr">Kilometres</string>
    <string name="distance_descr_miles">Miles</string>
    <string name="caloris_descr">KCAL \nBURNED</string>
    <string name="sport_descr">SPORT \nTIME</string>
    <string name="sleep_descr">SLEPT \nTIME</string>
    <string name="steep_name">Steps</string>
    <string name="distance_name">Distance</string>
    <string name="caloris_name">Calories</string>
    <string name="sport_name">Sport</string>
    <string name="sleep_name">Sleep</string>
    <string name="unit_steps">Steps</string>
    <string name="unit_distance">Kilometres</string>
    <string name="unit_distance_miles">Miles</string>
    <string name="unit_calories">Kcal</string>
    <string name="unit_sleep">Hours</string>
    <string name="unit_activetime">Minute</string>
    <string name="bar_goal">Goal</string>
    <string name="km">KM</string>
    <string name="minutes">MINUTES</string>
    <string name="device_name_unbind">Her</string>
    <string name="device_name_lfo1a">BASIC</string>
    <string name="device_name_lfo2a">H&#160;&#160;R</string>
    <string name="searching_for">Searching for&#160;</string>
    <string name="turn_on_bluetooth_tips">Enable Bluetooth on your Android device</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="ensure_device_nearby_tips">Please ensure that the equipment nearby</string>
    <string name="select_the_device">Select the device</string>
    <string name="search">Search</string>
    <string name="connect_time_out">connect device time out!</string>
    <string name="no_found_device">Did not found any bluetooth device!</string>
    <string name="no_bind_device">Did not bind the bluetooth device!</string>
    <string name="binding_device_tips">Please Press the button to comfirm pair</string>
    <string name="binding_device_tips_10c">Please double tapping on the equipment</string>
    <string name="binding_device_tips_young">Tap Bluetooth icon on your device\'s screen \'√\'</string>
    <string name="bing_failed">Binding failure! Please try again</string>
    <string name="bing_successful">The Binding is successful</string>
    <string name="heart_rate_very_slow">VerySlow</string>
    <string name="heart_rate_slow">Slow</string>
    <string name="heart_rate_normal">Normal</string>
    <string name="heart_rate_fast">Fast</string>
    <string name="heart_rate_very_fast">VeryFast</string>
    <string name="mood_calm">Calm</string>
    <string name="mood_moderate">Moderate</string>
    <string name="mood_depressed">Depressed</string>
    <string name="tired_energetic">Energetic</string>
    <string name="tired_moderate">Moderate</string>
    <string name="tired_slight">Slight</string>
    <string name="tired_serious">Serious</string>
    <string name="bpm">bpm</string>
    <string name="goal">Goal</string>
    <string name="heart_bpm">bpm</string>
    <string name="heart_avg">Average</string>
    <string name="heart_max">Max</string>
    <string name="heart_min">Min</string>
    <string name="reset_device">Reset device</string>
    <string name="remind_time">Time</string>
    <string name="remainds_type">Reminder type</string>
    <string name="reminder_m">M</string>
    <string name="reminder_tu">TU</string>
    <string name="reminder_w">W</string>
    <string name="reminder_th">TH</string>
    <string name="reminder_f">F</string>
    <string name="reminder_sa">SA</string>
    <string name="reminder_su">SU</string>
    <string name="repeat">Custom Repeat</string>
    <string name="add_note">Add a note</string>
    <string name="remind_type_sport">Sport</string>
    <string name="remind_type_sleep">Sleep</string>
    <string name="remind_type_eat">Eat</string>
    <string name="remind_type_medicine">Medicine</string>
    <string name="remind_type_wake_up">Wake up</string>
    <string name="remind_type_custom">Meeting</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="camera">Camera</string>
    <string name="album">Album</string>
    <string name="Cancel">Cancel</string>
    <string name="feedback_device">Device</string>
    <string name="feedback_app">App</string>
    <string name="feedback_pair">Pair</string>
    <string name="feedback_other">Other</string>
</resources>