<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingLeft="45dp"
    android:paddingRight="45dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btn_device"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="@mipmap/feedback_background"
        android:gravity="center"
        android:text="@string/feedback_device"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_app"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@mipmap/feedback_background"
        android:gravity="center"
        android:text="@string/feedback_app"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_pair"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@mipmap/feedback_background"
        android:gravity="center"
        android:text="@string/feedback_pair"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/btn_other"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@mipmap/feedback_background"
        android:gravity="center"
        android:text="@string/feedback_other"
        android:textColor="#ffffff"
        android:textStyle="bold" />
</LinearLayout>