<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#70EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dip"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip">

        <Button
            android:id="@+id/camera_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/camera" />

        <Button
            android:id="@+id/album_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/album" />

        <Button
            android:id="@+id/cancle_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dip"
            android:text="@string/Cancel" />
    </LinearLayout>

</RelativeLayout>