<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_modify_password"
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <cn.appscomm.l38t.UI.edit.AutoDelEditText
            android:id="@+id/oldpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:hint="@string/current_pwd"
            android:maxLength="16"
            android:password="true"
            android:singleLine="true"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold" />

        <cn.appscomm.l38t.UI.edit.AutoDelEditText
            android:id="@+id/newpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:hint="@string/new_pwd"
            android:maxLength="16"
            android:password="true"
            android:singleLine="true"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold" />

        <cn.appscomm.l38t.UI.edit.AutoDelEditText
            android:id="@+id/repeatedpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:hint="@string/confirm_password"
            android:maxLength="16"
            android:password="true"
            android:singleLine="true"
            android:text=""
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_modify_pwd"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@mipmap/btn_ok"
            android:textSize="22sp" />
    </LinearLayout>


</LinearLayout>